kubernetes/core/networking/nginx-ext-ingress-system/services/mainsail/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mainsail
  namespace: networking
spec:
  type: ExternalName
  externalName: print-srv-01.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 80
      protocol: TCP
      targetPort: *port
